--- a/dartGame/Css/dart.css
+++ b/dartGame/Css/dart.css
@@ -3,6 +3,8 @@ a {
     text-decoration: none;
   }
 body {
+    height: 100vh;
+    width: 100vw; /* 화면 너비의 100% */
     display: flex;
     flex-direction: column;
     align-items: center;
