--- a/dartGame/Css/dart.css
+++ b/dartGame/Css/dart.css
@@ -11,6 +11,44 @@ body {
     justify-content: center;
     margin: 0px;
     background-color: #f0f0f0;
+    transform: scale(0.9);
+    transform-origin: center; 
+}
+
+/* 모바일 */
+@media (max-width: 480px) {
+    body {
+        transform: scale(0.5); /* 모바일에서 축소 비율 조정 */
+    }
+}
+
+/* 태블릿 */
+@media (min-width: 481px) and (max-width: 768px) {
+    body {
+        transform: scale(0.5); /* 태블릿에서 축소 비율 조정 */
+    }
+}
+
+/* 노트북 */
+@media (min-width: 769px) and (max-width: 1200px) {
+    body {
+        transform: scale(0.8); /* 노트북에서 축소 비율 조정 */
+    }
+}
+
+/* 데스크탑 */
+@media (min-width: 1201px) {
+    body {
+        transform: scale(0.9); /* 데스크탑에서 원본 크기 */
+    }
+}
+
+.container {
+    width: 900px;
+    height: 900px;
+    /* 화면 크기에 따라 크기를 조절 */
+    transform: scale(0.9); /* 화면 축소 비율 조정 */
+    transform-origin: 0 0; /* 화면의 왼쪽 상단을 기준으로 축소 */
 }
 
 .playGame{
