--- a/dartGame/Css/index.css
+++ b/dartGame/Css/index.css
@@ -8,6 +8,35 @@ body {
     font-family: 'Arial', sans-serif;
     background: #000;
     overflow: hidden;
+    transform: sc;
+}
+
+/* 모바일 */
+@media (max-width: 480px) {
+    body {
+        transform: scale(0.5); /* 모바일에서 축소 비율 조정 */
+    }
+}
+
+/* 태블릿 */
+@media (min-width: 481px) and (max-width: 768px) {
+    body {
+        transform: scale(0.5); /* 태블릿에서 축소 비율 조정 */
+    }
+}
+
+/* 노트북 */
+@media (min-width: 769px) and (max-width: 1200px) {
+    body {
+        transform: scale(0.5); /* 노트북에서 축소 비율 조정 */
+    }
+}
+
+/* 데스크탑 */
+@media (min-width: 1201px) {
+    body {
+        transform: scale(0.9); /* 데스크탑에서 원본 크기 */
+    }
 }
 
 .intro-screen {
